data/all_generated_tests/raw_wast_tests/br_StackCorruption_227.wast
;; 8. **Test Invalid Operand Type Handling in Br:**    - **Description:** Execute a `br` instruction with operand types mismatched from the expected stack height in a block.    - **Reasoning:** Ensures correct operand stack balancing when branches are taken.    - **Constraint:** Verify operand type compliance in targets.    - **Relation to Stack Corruption:** Improperly handled operands could lead to unexpected stack heights, corrupting the execution path.

(assert_invalid
  (module (func $invalid_operand_type_handling
    (block (result i32) (br 0 (i64.const 1)) (i32.const 2))
  ))
  "type mismatch"
)